--- a/Steam Game Recommender - Part 1 Data Preprocessing.ipynb
+++ b/Steam Game Recommender - Part 1 Data Preprocessing.ipynb
@@ -121,8 +121,7 @@
     "Multiple data sets from [Kaggle](https://www.kaggle.com/) will be utilized to obtain a greater breadth of information. This information will have been derived from the Steam Store API, SteamSpy API and [Average Game Time](howlongtobeat.com).\n",
     "\n",
     "The links to the original data sets being utilized are as follows: \n",
-    "- [Game Recommendations on Steam by Anton Kozyriev\n",
-    "](https://www.kaggle.com/datasets/antonkozyriev/game-recommendations-on-steam)\n",
+    "- [Game Recommendations on Steam by Anton Kozyriev](https://www.kaggle.com/datasets/antonkozyriev/game-recommendations-on-steam)\n",
     "- [Steam Games Dataset by Martin Bustos](https://www.kaggle.com/datasets/fronkongames/steam-games-dataset)\n",
     "- [Steam games dataset by Alexander Shein](https://www.kaggle.com/datasets/gruffgemini/steam-games-dataset)\n",
     "- [🎮 SteamGames (71k games) by mexwell](https://www.kaggle.com/datasets/mexwell/steamgames)\n",
